--- a/project1/styles.css
+++ b/project1/styles.css
@@ -1,18 +1,18 @@
-/* Variables */
+
 :root {
     --icon_width: 79px;
     --icon_height: 79px;
     --num_icons: 9;
   }
   
-  /* Reset Styles */
+
   html, body {
     height: 100%;
     margin: 0;
     box-sizing: border-box;
   }
   
-  /* Set Background Image */
+  
   body {
     background-image: url('https://source.unsplash.com/XkMpEeI3uJ0/1920x1080'); /* Unsplash URL for the image in 1920x1080 resolution */
     background-size: behind;
@@ -21,7 +21,7 @@
   }
   /*set background as image, use of source.unsplash.com*/ 
   
-  /* Header Styles */
+
   header {
     background-color: #333;
     color: gold;
@@ -44,7 +44,7 @@
     text-align: center;
   }
   
-  /* Navigation Styles */
+ 
   .nav {
     margin: 0;
     width: auto;
@@ -84,7 +84,7 @@
     }
   }
   
-  /* Container Styles */
+ 
   .container {
     background-color: brown;
     height: 500px;
@@ -104,7 +104,7 @@
     order: 1;
   }
   
-  /* Slots Container Styles */
+
   .slots {
     width: calc(3 * var(--icon_width));
     height: calc(3 * var(--icon_height));
@@ -112,12 +112,12 @@
     padding: calc(0.3 * var(--icon_height));
     display: flex;
     justify-content: space-between;
-    background: color: purple; /* It looks like there's a syntax error here, I've corrected it */
+    background: color: purple; 
     border-radius: 5px;
     border: 4px solid black;
   }
   
-  /* Individual Slot Styles */
+  
   .slot {
     flex: 1 0 auto;
     background: white;
@@ -127,7 +127,7 @@
     border-radius: 5px;
   }
   
-  /* Go Button Styles */
+ 
   .go {
     width: 100%;
     color: black;
@@ -144,7 +144,7 @@
     background-color: gold;
   }
   
-  /* Footer Styles */
+
   .foot {
     height: 150px;
     background-color: black;
@@ -152,7 +152,7 @@
     order: 2; /* Move the footer to the end */
   }
   
-  /* Reel Styles */
+ 
   .reel {
     border: 1px solid black;
     width: var(--icon_width);
@@ -161,7 +161,7 @@
     background-position: 0 0;
   }
   
-  /* Additional styles for individual images inside the reels */
+  
   .reel img {
     width: 100%;
     height: 100%;
